--- a/app/views/index.html.erb
+++ b/app/views/index.html.erb
@@ -5,7 +5,7 @@
   <div class="row justify-content-center">
     <%= form_with(model: @equipamentos, local: true) do |f| %>
       <div class="form-group">
-        <%= f.label :descricao %>
+        <%= f.label "Descrição:" %>
         <%= f.text_field :descricao, class: 'form-control' %>
       </div>
       
