--- a/app/views/componentes/new.html.erb
+++ b/app/views/componentes/new.html.erb
@@ -5,16 +5,17 @@
   <div class="row justify-content-center">
     <%= form_with scope: :componente, url: componentes_path, local: true do |form| %>
       <div class="form-group">
-        <%= form.label :descricao %>
+        <%= form.label "Id equipamento:" %>
+        <%= form.number_field :equipamento_id, class: "form-control bfh-number" %>
+      </div>
+      <br>
+      <div class="form-group">
+        <%= form.label "Descrição:" %>
         <%= form.text_field :descricao, class: 'form-control' %>
       </div>
+      <br>
       <div class="form-group">
-        <%= form.label :equipamento_id %>
-        <%= form.text_field :equipamento_id, class: 'form-control' %>
-      </div>
-
-      <div class="form-group">
-        <%= form.submit class: 'form-control btn-primary' %>
+        <%= form.submit  'Salvar', class: 'form-control btn-primary' %>
       </div>
     <% end %>
   </div>
