--- a/app/views/equipamentos/new.html.erb
+++ b/app/views/equipamentos/new.html.erb
@@ -5,12 +5,12 @@
   <div class="row justify-content-center">
     <%= form_with scope: :equipamento, url: equipamentos_path, local: true do |form| %>
       <div class="form-group">
-        <%= form.label :descricao %>
+        <%= form.label 'Descrição:' %>
         <%= form.text_field :descricao, class: 'form-control' %>
       </div>
-
+      <br>
       <div class="form-group">
-        <%= form.submit class: 'form-control btn-primary' %>
+        <%= form.submit 'Salvar Equipamento', class: 'form-control btn-primary' %>
       </div>
     <% end %>
   </div>
