--- a/app/views/equipamentos/edit.html.erb
+++ b/app/views/equipamentos/edit.html.erb
@@ -5,7 +5,7 @@
   <div class="row justify-content-center">
     <%= form_with(model: @equipamento, local: true) do |form| %>
       <div class="form-group">
-        <%= form.label "Descrição" %>
+        <%= form.label "Descrição:" %>
         <%= form.text_field :descricao, class: 'form-control' %>
       </div>
       <br>
